# dbt23-hands-on-lab

./: .gitignore  .nightwatchrc  README.md  docker-compose.yml
metadata-worker/: README.md  install_additional_pkgs.sh  local_test.py  pyproject.toml  requirements.txt
metadata-worker/worker/nw/: log.py  pipeline_runner.py  utils.py
metadata-worker/worker/tasks/converter/: crossref_article_converter.py
metadata-worker/worker/tasks/converters/: crossref_article_converter.py
metadata-worker/worker/tasks/db/: record_store.py
metadata-worker/worker/tasks/download/: crossref_downloader.py  crossref_downloader_util.py
metadata-worker/worker/tasks/examples/: many_messages.py  sleep.py
metadata-worker/worker/tasks/fs/: get_available_imports.py  get_file_list.py  move_dir.py  set_imported_flag.py
metadata-worker/worker/tasks/importer/: json.py
metadata-worker/worker/tasks/importers/: json.py
metadata-worker/worker/tasks/index/: delete_solr_index.py  update_solr_index.py
metadata-worker/worker/tasks/utils/: httpxClient.py
migrations/: 20230101000000-initial.sql
pipelines/: crossref_converter.json  crossref_downloader.json  delete_solr_index.json  update_solr_index.json
rabbitmq/: rabbitmq.conf
search-web-app/: app.py  requirements.txt
search-web-app/templates/: index.html
solr/: apply_solr_schema.sh  schema.json
test-metadata/: some_crossref_data.sql
